# head-tail-init-last

./: README.md  head-tail-init-last.cabal
src/: .HeadTailInitLast.hs.swp  HeadTailInitLast.hs
test/: HeadTailInitLastSpec.hs
